--- a/team-builder/src/App.css
+++ b/team-builder/src/App.css
@@ -1,38 +1,114 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  font-size: 62.5%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  background-color: #252526;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+h1 {
+  font-size: 4.8rem;
+  color: white;
+  padding: 20px;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  width: 30%;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  font-size: 3.2rem;
+}
+
+.team-wrapper {
+  width: 75%;
+  margin: 0 auto;
+}
+
+h2 {
+  font-size:3.6rem;
+  text-align: center;
+  padding: 24px;
+  color: #252526;
+  width: 100%;
+}
+
+.team {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.team-card {
+  width: 30%;
+  margin: 1%;
+  text-align: center;
+  border: 1px solid #DADBDA;
+  box-shadow: 4px 2px 20px #EAEBEA;
+}
+
+.team-img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.team-card div {
+  display: flex;
+  flex-flow: row nowrap;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 8px 0 4px;
+}
+
+.edit-icon {
+  width: 30px;
+  padding-left: 4px;
+}
+
+.edit-button {
+  border: 0;
+  background: none;
+  cursor: pointer;
+}
+
+.email {
+  background-color: #007AD3;
   color: white;
+  font-size: 1.6rem;
+  padding: 12px;
+  width: 100%;
+  display: block;
+  text-decoration: none;
+  margin-top: 16px;
 }
 
-.App-link {
-  color: #61dafb;
+h3 {
+  font-size: 2rem;
+  line-height: 1.5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+  font-size: 1.6rem;
+  line-height: 1.5;
 }
+
+
+
+form {
+  display: flex;
+  align-items: center;
+  flex-flow: column nowrap;
+}
+
+
