--- a/team-builder/src/App.css
+++ b/team-builder/src/App.css
@@ -6,18 +6,22 @@
   font-size: 62.5%;
 }
 
+
 header {
   background-color: #252526;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 h1 {
   font-size: 4.8rem;
   color: white;
-  padding: 20px;
+  padding: 28px;
+  font-weight: 400;
 }
 
 nav {
@@ -41,6 +45,9 @@ h2 {
   padding: 24px;
   color: #252526;
   width: 100%;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
 
 .team {
@@ -93,6 +100,10 @@ h2 {
   margin-top: 16px;
 }
 
+.email:hover {
+  background-color: #0073C8;
+}
+
 h3 {
   font-size: 2rem;
   line-height: 1.5;
@@ -103,12 +114,70 @@ p {
   line-height: 1.5;
 }
 
-
-
-form {
-  display: flex;
-  align-items: center;
-  flex-flow: column nowrap;
+a {
+  font-size: 1.6rem;
 }
 
+ strong {
+   font-size: 1.6rem;
+ }
 
+ .form-wrapper {
+   margin-top: 60px;
+   padding: 70px 0 120px;
+   background-image: url("https://images.unsplash.com/photo-1558402529-d2638a7023e9?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
+ }
+
+form {
+  width: 90%;
+  height: 100%;
+  margin: 0 auto;
+  /* display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; */
+}
+
+label {
+  text-align: right;
+  font-size: 1.8rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+  padding: 8px;
+  color: white;
+  background-color: #303031;
+}
+
+input {
+  font-size: 1.8rem;
+  width: 300px;
+  padding: 0 8px;
+  border: 2px solid #303031;
+}
+
+input:not(:last-child) {
+  margin-right: 18px;
+}
+
+form div {
+  display: flex;
+  justify-content: center;
+}
+
+button[type=submit] {
+  width: 200px;
+  margin-top: 20px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.6rem;
+  letter-spacing: 1px;
+  background-color: #303031;
+  padding: 12px;
+  color: white;
+  border: 0;
+  cursor: pointer;
+}
+
+button[type=submit]:hover {
+  color: white;
+  background-color: #1E1E1E;
+}
